| Summary: | ASTERISK-28391: res_indications: Crash requesting autocomplete on indications cli command | ||
| Reporter: | Lucas Mendes (lmendes86) | Labels: | |
| Date Opened: | 2019-04-19 08:02:12 | Date Closed: | 2019-04-22 08:50:43 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_indications |
| Versions: | 11.25.3 13.24.1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) indications_backtrace.txt | |
| Description: | While using asterisk command line when you ask for autocompletion for the third param in `indication remove` asterisk crashes, for example `indication remove nl dial ` and then pressing tab 2 times.
I added the backtrace of the issue as an attachment. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2019-04-19 08:02:14.085-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2019-04-22 08:50:44.981-0500 Change 11298 merged by Friendly Automation: res_indications: Fix indications remove command autocomplete [https://gerrit.asterisk.org/c/asterisk/+/11298|https://gerrit.asterisk.org/c/asterisk/+/11298] By: Friendly Automation (friendly-automation) 2019-04-22 08:55:43.985-0500 Change 11300 merged by George Joseph: res_indications: Fix indications remove command autocomplete [https://gerrit.asterisk.org/c/asterisk/+/11300|https://gerrit.asterisk.org/c/asterisk/+/11300] By: Friendly Automation (friendly-automation) 2019-04-22 08:57:25.461-0500 Change 11299 merged by Friendly Automation: res_indications: Fix indications remove command autocomplete [https://gerrit.asterisk.org/c/asterisk/+/11299|https://gerrit.asterisk.org/c/asterisk/+/11299] | ||